# envoy

./: .env.example  .gitignore  Cargo.toml  README.md  build-linux.sh  build-macos.sh  build-windows.sh  install.ps1  install.sh
.envoy/: config.toml  latest
.envoy/refs/remotes/origin/: HEAD
.github/workflows/: release.yml
docs/: IMPLEMENTATION_SECURITY.md
src/: main.rs
src/commands/: auth.rs  commit.rs  crypto.rs  doctor.rs  init.rs  member.rs  mod.rs  pull.rs  push.rs  remote.rs  remove.rs  satus.rs  status.rs  update.rs
src/utils/: commit.rs  config.rs  initialized.rs  manifest.rs  members.rs  mod.rs  paths.rs  project_config.rs  session.rs  storage.rs  ui.rs
