[package]
name = "envoy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.2"
dialoguer = "0.12.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
hex = "0.4.3"
indicatif = "0.18.3"
rand = "0.9.2"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "rt-multi-thread", "macros"] }
toml = "0.9.10"
zeroize = "1.8.2"
