[package]
name = "envoy-cli"
version = "0.1.3"
edition = "2024"
description = "A Git-like CLI for managing encrypted environment files"
license = "MIT"
repository = "https://github.com/denizlg24/envoy"
readme = "README.md"
keywords = ["secrets", "env", "cli", "encryption"]
categories = ["command-line-utilities"]

[[bin]]
name = "envy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.2"
dialoguer = "0.12.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
hex = "0.4.3"
indicatif = "0.18.3"
rand = "0.9.2"
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "rt-multi-thread", "macros"] }
toml = "0.9.10"
zeroize = "1.8.2"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
tempfile = "3"
walkdir = "2"
